--- a/cli/package.json
+++ b/cli/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "circleci-config-visualizer",
-  "version": "0.1.0",
-  "main": "index.js",
+  "main": "build/index.js",
   "bin": {
-    "circleci-config-visualizer": "./build/index.js"
+    "circleci-config-visualizer": "build/index.js"
   },
   "scripts": {
     "start": "node build/index.js",
@@ -22,7 +20,6 @@
   },
   "dependencies": {
     "@types/express": "^5.0.0",
-    "circleci-config-visualizer": "file:",
     "commander": "^12.1.0",
     "express": "^4.21.1",
     "socket.io": "^4.8.0"
