--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "circleci-config-visualizer",
-  "version": "0.1.1",
+  "version": "0.1.5",
   "description": "A tool to visualize CircleCI config files",
   "main": "cli/build/index.js",
   "bin": {
-    "circleci-config-visualizer": "./cli/build/index.js"
+    "circleci-config-visualizer": "cli/build/index.js"
   },
   "scripts": {
+    "postinstall": "cd client && npm install --force && cd .. && cd cli && npm install",
     "start": "cd cli && node build/index.js",
     "dev": "cd cli && nodemon src/index.ts",
     "build": "cd cli && tsc"
   },
+  "files": [
+    "cli",
+    "client"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
